# crawler-bot

./: .gitignore  Dockerfile  Readme.md  bot.py  database.py  docker-compose.yml  parser.py  pyproject.toml
